# sweetc

./: .clang-format  CMakeLists.txt
include/sc/: hooks.h  macros.h  traits.h
include/sc/containers/: list.h
include/sc/containers/raw/: list.h  tree.h
include/sc/object/: object.h  type.h
include/sc/traits/: cmp.h  hashable.h  object.h  partial_cmp.h
include/sc/types/: string.h
include/sc/utils/: hash.h
src/: CMakeLists.txt  hooks.c  traits.c
src/containers/: list.c
src/testing/: CMakeLists.txt
src/testing/include/sc/testing/: test_harness.h
src/testing/src/: test_harness.c
src/traits/: cmp.c  hashable.c  object.c  partial_cmp.c
src/types/: list.c  string.c
src/utils/: hash.c
tests/: CMakeLists.txt  list.c  raw_list.c  raw_tree.c  string.c  tree.c
